--- a/docker/training/Dockerfile
+++ b/docker/training/Dockerfile
@@ -8,6 +8,14 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir \
     pandas \
+    matplotlib \
+    seaborn \
+    numpy \
+    pydantic \
+    joblib \
+    fastapi \
+    jinja2 \
+    uvicorn[standard] \
     scikit-learn \
     mlflow \
     joblib \
