--- a/jenkins-install/jenkins-pvc.yaml
+++ b/jenkins-install/jenkins-pvc.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jenkins-pvc
+  name: shared-pvc
   namespace: jenkins
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
+  storageClassName: mlflow-rwx  
   resources:
     requests:
-      storage: 10Gi
+      storage: 20Gi
 
