--- a/mlflow/mlflow-pvc.yaml
+++ b/mlflow/mlflow-pvc.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mlflow-pvc
+  name: shared-pvc
   namespace: mlflow
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
+  storageClassName: mlflow-rwx  
   resources:
     requests:
       storage: 20Gi    
