--- a/mlflow/postgres.yaml
+++ b/mlflow/postgres.yaml
@@ -30,7 +30,7 @@ spec:
       volumes:
       - name: pgdata
         persistentVolumeClaim:
-          claimName: mlflow-pvc
+          claimName: shared-pvc
 ---
 apiVersion: v1
 kind: Service
